--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 			<!-- Essentials Illustration -->
-			<div id="illustration"><center><img src="TieRye.github.io/Images/big.png"></center></div>
+			<div id="illustration"><center><img src="https://TieRye.github.io/Images/big.png"></center></div>
 			<!-- About Me -->
 			<div id="about"><div class="inner">
 				<p>Hello world! I'm a developer and a cyber security enthusiast.</p><br/><br/><br/>
