--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="keywords" content="Tyler Ryan" />
 		<meta name="author" content="Tyler Ryan" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0;">
-	  	<link href="https://TieRye.github.io/stylesheet/style.css" rel="stylesheet">
+	  	<link href="https://TieRye.github.io/Stylesheet/style.css" rel="stylesheet">
 	    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'> 
 		<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>   
-		<link href="https://TieRye.github.io/stylesheet/magnific-popup.css?v=0.9.8" rel="stylesheet" />
+		<link href="https://TieRye.github.io/Stylesheet/magnific-popup.css?v=0.9.8" rel="stylesheet" />
 	    <script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -221,8 +221,8 @@
 				</span>
 			</div></div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-		<script src="https://TieRye.github.io/scripts/jquery.fixedTOC.js?v=3.0"></script>
-		<script src="https://TieRye.github.io/scripts/jquery.magnific-popup.js?v=0.9.8"></script>
+		<script src="TieRye.github.io/Scripts/jquery.fixedTOC.js?v=3.0"></script>
+		<script src="TieRye.github.io/Scripts/jquery.magnific-popup.js?v=0.9.8"></script>
 		<script type="text/javascript">
 		 $(document).ready(function() {
 		        $('.image-popup-no-margins').magnificPopup({
