--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
 				</span>
 			</div></div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-		<script src="TieRye.github.io/Scripts/jquery.fixedTOC.js?v=3.0"></script>
-		<script src="TieRye.github.io/Scripts/jquery.magnific-popup.js?v=0.9.8"></script>
+		<script src="http://TieRye.github.io/Scripts/jquery.fixedTOC.js?v=3.0"></script>
+		<script src="http://TieRye.github.io/Scripts/jquery.magnific-popup.js?v=0.9.8"></script>
 		<script type="text/javascript">
 		 $(document).ready(function() {
 		        $('.image-popup-no-margins').magnificPopup({
