--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							&gt; Tyler.resume<br/>
 							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="Tylerryan.pdf">Tylerryan.pdf</a>"<br/><br/></span>
 							&gt; Tyler.thoughts<br/>
-							<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="https://twitter.com/Tsryan_">@Tsryan_</a> <a href="https://github.com/TieRye">TieRye Github</a>]<br/><br/></span>
+							<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="https://twitter.com/Tsryan_">@Tsryan_</a> <a href="https://github.com/TieRye?tab=repositories">TieRye Github</a>]<br/><br/></span>
 							&gt; Tyler.email<br/>
 							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="mailto:Tyler.tryan8148@gmail.com">Tyler.tryan8148@gmail.com</a>"<br/><br/></span>
 						</div>
