--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<span class="right"><i>2012-2015</i></span><br/>
 					<b>Pre-Med</b>
 					<span class="right"><i>Morgantown, WV</i></span><br/><br/>
-					I start my college career here as an aspiring anesthesiologist. I enjoyed learning this discipline but could not see myself following the medical feild
+					I start my college career here as an aspiring anesthesiologist. I enjoyed learning this discipline but could not see myself following the medical field
 					path. Then computer science and cyber security became my passion.<br/><br/>
 					<span class="skill">Biology</span><span class="skill">Chemistry</span><span class="skill">Physics</span><span class="skill">anatomy</span>
 				</p>
